fix: update project card border color for better visibility

--- a/src/styles/pages/_Projects.scss
+++ b/src/styles/pages/_Projects.scss
@@ -42,7 +42,7 @@
           background-size: cover;
           background-clip: border-box;
           border-radius: 12px;
-          border: 3px solid $primary-color;
+          border: 3px solid rgba($text-secondary, 0.5);
           margin-bottom: 6px;
           aspect-ratio: 16/9;
           object-fit: cover;
